--- a/src/app/views/base/forms.component.html
+++ b/src/app/views/base/forms.component.html
@@ -314,7 +314,7 @@
             </div>
           </form>
         </div>
-        <div class="card-footer">
+        <div class="row">
           <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
         </div>
