--- a/src/app/views/base/popovers.component.html
+++ b/src/app/views/base/popovers.component.html
@@ -1,161 +1,69 @@
 <div class="animated fadeIn">
-  <div class="card">
-    <div class="card-header">
-      Bootstrap Popover
-      <div class="card-header-actions">
-        <a href="https://valor-software.com/ngx-bootstrap/#/popover" target="_blank">
-          <small className="text-muted">docs</small>
-        </a>
-      </div>
-    </div>
-    <div class="card-body">
-      <button type="button" class="btn btn-primary"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-        Live demo
-      </button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small>positioning</small>
-    </div>
-    <div class="card-body">
-      <button type="button" class="btn btn-default btn-secondary"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-              popoverTitle="Popover on top"
-              placement="top">
-        Popover on top
-      </button>
-
-      <button type="button" class="btn btn-default btn-secondary"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-              popoverTitle="Popover on right"
-              placement="right">
-        Popover on right
-      </button>
-
-      <button type="button" class="btn btn-default btn-secondary"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-              popoverTitle="Popover auto"
-              placement="auto">
-        Popover auto
-      </button>
-
-      <button type="button" class="btn btn-default btn-secondary"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-              popoverTitle="Popover on left"
-              placement="left">
-        Popover on left
-      </button>
-
-      <button type="button" class="btn btn-default btn-secondary"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-              popoverTitle="Popover on bottom"
-              placement="bottom">
-        Popover on bottom
-      </button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small><code>focus</code> trigger</small>
-    </div>
-    <div class="card-body">
-      <button type="button" class="btn btn-success"
-              popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-              popoverTitle="Dismissible popover"
-              triggers="focus">
-        Dismissible popover
-      </button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small>dynamic content</small>
-    </div>
-    <div class="card-body">
-      <button type="button" class="btn btn-info"
-              [popover]="content" [popoverTitle]="title">
-        Simple binding
-      </button>
-
-      <ng-template #popTemplate>Just another: {{content}}</ng-template>
-      <button type="button" class="btn btn-warning"
-              [popover]="popTemplate" popoverTitle="Template ref content inside">
-        TemplateRef binding
-      </button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small>dynamic HTML</small>
-    </div>
-    <div class="card-body">
-      <ng-template #popTemplateHtml>Here we go:
-        <div [innerHtml]="html"></div>
-      </ng-template>
-      <button type="button" class="btn btn-success"
-              [popover]="popTemplateHtml" popoverTitle="Dynamic html inside">
-        Show me popover with html
-      </button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small>append to <code>body</code></small>
-    </div>
-    <div class="card-body">
-      <div class="row panel" style="position: relative; overflow: hidden;">
-        <div class="card-body panel-body">
-          <button type="button" class="btn btn-danger"
-                  popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-            Default popover
-          </button>
-          <button type="button" class="btn btn-success"
-                  popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
-                  container="body">
-            Popover appended to body
-          </button>
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-header">
+          <strong>Tìm kiếm</strong>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-12">
+              <div class="form-group">
+                <input type="text" class="form-control" id="name" placeholder="Nhập từ khóa">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-5"></div>
+          <div class="col-4">
+            <button type="submit" class="btn btn-sm btn-primary" style="margin-bottom: 2%"><i
+                class="fa fa-dot-circle-o"></i> Tìm kiếm</button>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small>custom triggers</small>
-    </div>
-    <div class="card-body">
-      <button type="button" class="btn btn-info"
-              popover="I will hide on blur"
-              triggers="mouseenter:mouseleave">
-        Hover over me!
-      </button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Popover
-      <small>manual triggering</small>
-    </div>
-    <div class="card-body">
-      <p>
-        <span popover="Hello there! I was triggered manually"
-              triggers="" #pop="bs-popover">
-        This text has attached popover
-        </span>
-      </p>
-      <button type="button" class="btn btn-success" (click)="pop.show()">
-        Show
-      </button>
-      <button type="button" class="btn btn-warning" (click)="pop.hide()">
-        Hide
-      </button>
+      <div class="card">
+        <div class="card-header">
+          <strong>Hướng dẫn</strong>
+        </div>
+        <div class="card-body">
+          <div *ngFor="let i of data">
+            <div class="row">
+              <div class="col-12">
+                <div class="row card-file">
+                  <div class="col-3">
+                    <img class="card-img" src="./assets/img/{{i.img}}" />
+                  </div>
+                  <div class="col-7">
+                    <h4 style="color: blue">{{i.title}}</h4>
+                    <h5 style="color: cornflowerblue">{{i.type}}</h5>
+                    <h5 style="color: dimgray">Lượt tải xuống: {{i.download}}</h5>
+                    <i class="icon-clock icons font-xl d-block mt-4"> {{i.date}}</i>
+                  </div>
+                  <div class="col-2">
+                    <button class="btn btn-primary"><i class="fa fa-download"></i>Tải xuống</button>
+                    <button class="btn btn-success" [ngStyle]="style"><i class="fa fa-edit"></i>Chỉnh sửa</button>
+                    <button class="btn btn-dark" [ngStyle]="style"><i class="fa fa-remove"></i> Xóa</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
+        </div>
+        <nav style="padding-left: 40%">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+            <li class="page-item active">
+              <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </div>
 </div>
