--- a/src/app/views/base/paginations.component.html
+++ b/src/app/views/base/paginations.component.html
@@ -1,82 +1,68 @@
 <div class="animated fadeIn">
-  <div class="card">
-    <div class="card-header">
-      Bootstrap Pagination
-      <div class="card-header-actions">
-        <a href="https://valor-software.com/ngx-bootstrap/#/pagination" target="_blank">
-          <small className="text-muted">docs</small>
-        </a>
-      </div>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-xs-12 col-12 d-sm-down-none">
-          <pagination [totalItems]="totalItems" [(ngModel)]="currentPage" (pageChanged)="pageChanged($event)"></pagination>
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-header">
+          <strong>Tìm kiếm</strong>
         </div>
-        <div class="col-xs-12 col-12">
-          <pagination [boundaryLinks]="true" [totalItems]="totalItems" [(ngModel)]="currentPage" class="pagination-sm" [maxSize]="6"
-                      previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"></pagination>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-12">
+              <div class="form-group">
+                <input type="text" class="form-control" id="name" placeholder="Nhập từ khóa">
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-12 col-12 d-sm-down-none">
-          <pagination [directionLinks]="false" [boundaryLinks]="true" [totalItems]="totalItems"
-                      [(ngModel)]="currentPage"></pagination>
-        </div>
-        <div class="col-xs-12 col-12">
-          <pagination [directionLinks]="false" [totalItems]="totalItems" [(ngModel)]="currentPage"
-                      (numPages)="smallnumPages = $event"></pagination>
+        <div class="row">
+          <div class="col-5"></div>
+          <div class="col-4">
+            <button type="submit" class="btn btn-sm btn-primary" style="margin-bottom: 2%"><i
+                class="fa fa-dot-circle-o"></i> Tìm kiếm</button>
+          </div>
         </div>
       </div>
-      <pre class="card card-body card-header mb-3">The selected page no: {{currentPage}}/{{smallnumPages}}</pre>
-    </div>
-    <div class="card-footer">
-      <button type="button" class="btn btn-info" (click)="setPage(3)">Set current page to: 3</button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Pagination <small>states & limits</small>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-xs-12 col-12">
-          <pagination [totalItems]="bigTotalItems" [(ngModel)]="bigCurrentPage" [maxSize]="maxSize" class="pagination-sm"
-                      previousText="&lsaquo;" nextText="&rsaquo;" [boundaryLinks]="true"></pagination>
+      <div class="card">
+        <div class="card-header">
+          <strong>Kế hoạch</strong>
         </div>
-
-        <div class="col-xs-12 col-12">
-          <pagination [totalItems]="bigTotalItems" [(ngModel)]="bigCurrentPage" [maxSize]="maxSize" class="pagination-sm"
-                      previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"
-                      [boundaryLinks]="true" [rotate]="false" (numPages)="numPages = $event"></pagination>
+        <div class="card-body">
+          <div *ngFor="let i of data">
+            <div class="row">
+              <div class="col-12">
+                <div class="row card-file">
+                  <div class="col-3">
+                    <img class="card-img" src="./assets/img/{{i.img}}" />
+                  </div>
+                  <div class="col-7">
+                    <h4 style="color: blue">{{i.title}}</h4>
+                    <h5 style="color: cornflowerblue">{{i.type}}</h5>
+                    <h5 style="color: dimgray">Lượt tải xuống: {{i.download}}</h5>
+                    <i class="icon-clock icons font-xl d-block mt-4"> {{i.date}}</i>
+                  </div>
+                  <div class="col-2">
+                    <button class="btn btn-primary"><i class="fa fa-download"></i>Tải xuống</button>
+                    <button class="btn btn-success" [ngStyle]="style"><i class="fa fa-edit"></i>Chỉnh sửa</button>
+                    <button class="btn btn-dark" [ngStyle]="style"><i class="fa fa-remove"></i> Xóa</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
         </div>
-      </div>
-      <pre class="card card-body card-header">Page: {{bigCurrentPage}} / {{numPages}}</pre>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      Pager
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-xs-12 col-12 col-md-6">
-          <pagination
-            [directionLinks]="false"
-            [totalItems]="totalItems"
-            [(ngModel)]="currentPager"
-            (numPages)="smallnumPages = $event">
-          </pagination>
-        </div>
-
-        <div class="col-xs-12 col-12 col-md-6">
-          <pager
-            [totalItems]="totalItems"
-            [(ngModel)]="currentPager"
-            (pageChanged)="pageChanged($event)"
-            pageBtnClass="btn"
-            [itemsPerPage]="10"
-            class="pull-left">
-          </pager>
-        </div>
+        <nav style="padding-left: 40%">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+            <li class="page-item active">
+              <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </div>
