--- a/src/app/views/base/tabs.component.html
+++ b/src/app/views/base/tabs.component.html
@@ -1,69 +1,69 @@
 <div class="animated fadeIn">
   <div class="row">
-    <div class="col-md-6 mb-4">
-      <!-- Nav tabs -->
-      <tabset>
-        <tab heading="Home">
-          1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab heading="Profile">
-          2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab heading="Messages">
-          3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-      </tabset>
-    </div><!--/.col-->
-    <div class="col-md-6 mb-4">
-      <!-- Nav tabs -->
-      <tabset>
-        <tab>
-          <ng-template tabHeading><i class="icon-calculator"></i></ng-template>
-          2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab>
-          <ng-template tabHeading><i class="icon-basket-loaded"></i></ng-template>
-          3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab>
-          <ng-template tabHeading><i class="icon-pie-chart"></i></ng-template>
-          4. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-      </tabset>
-    </div><!--/.col-->
-    <div class="col-md-6 mb-4">
-      <!-- Nav tabs -->
-      <tabset>
-        <tab>
-          <ng-template tabHeading><i class="icon-calculator"></i> Calculator</ng-template>
-          2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab>
-          <ng-template tabHeading><i class="icon-basket-loaded"></i> Shoping cart</ng-template>
-          3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab>
-          <ng-template tabHeading><i class="icon-pie-chart"></i> Charts</ng-template>
-          4. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-      </tabset>
-    </div><!--/.col-->
-    <div class="col-md-6 mb-4">
-      <!-- Nav tabs -->
-      <tabset>
-        <tab>
-          <ng-template tabHeading><i class="icon-list"></i> Menu &nbsp;<span class="badge badge-success">New</span></ng-template>
-          1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab>
-          <ng-template tabHeading><i class="icon-calculator"></i> Calculator &nbsp;<span class="badge badge-pill badge-danger">29</span></ng-template>
-          2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-        <tab>
-          <ng-template tabHeading><i class="icon-pie-chart"></i> Charts</ng-template>
-          4. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </tab>
-      </tabset>
-    </div><!--/.col-->
-  </div><!--/.row-->
+    <div class="col-12">
+      <div class="card">
+        <div class="card-header">
+          <strong>Tìm kiếm</strong>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-12">
+              <div class="form-group">
+                <input type="text" class="form-control" id="name" placeholder="Nhập từ khóa">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-5"></div>
+          <div class="col-4">
+            <button type="submit" class="btn btn-sm btn-primary" style="margin-bottom: 2%"><i
+                class="fa fa-dot-circle-o"></i> Tìm kiếm</button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <strong>Tìm kiếm gần đây</strong>
+        </div>
+        <div class="card-body">
+          <div *ngFor="let i of data">
+            <div class="row">
+              <div class="col-12">
+                <div class="row card-file">
+                  <div class="col-3">
+                    <img class="card-img" src="./assets/img/{{i.img}}" />
+                  </div>
+                  <div class="col-7">
+                    <h4 style="color: blue">{{i.title}}</h4>
+                    <h5 style="color: cornflowerblue">{{i.type}}</h5>
+                    <h5 style="color: dimgray">Lượt tải xuống: {{i.download}}</h5>
+                    <i class="icon-clock icons font-xl d-block mt-4"> {{i.date}}</i>
+                  </div>
+                  <div class="col-2">
+                    <button class="btn btn-primary"><i class="fa fa-download"></i>Tải xuống</button>
+                    <button class="btn btn-success" [ngStyle]="style"><i class="fa fa-edit"></i>Chỉnh sửa</button>
+                    <button class="btn btn-dark" [ngStyle]="style"><i class="fa fa-remove"></i> Xóa</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
+        </div>
+        <nav style="padding-left: 40%">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+            <li class="page-item active">
+              <a class="page-link" href="#">1</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
 </div>
