--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -13,7 +13,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                    <input type="text" class="form-control" placeholder="Username" autocomplete="username" required [(ngModel)]="username" name="username">
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
@@ -23,7 +23,7 @@
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4">Login</button>
+                      <button type="button" class="btn btn-primary px-4" (click)="doLogin()">Login</button>
                     </div>
                     <div class="col-6 text-right">
                       <button type="button" class="btn btn-link px-0">Forgot password?</button>
